<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Visibook</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Home Activity</string>
    <string name="app_id">924951214224981</string>

    <string name="font_fontFamily_medium">sans-serif</string>
    <string name="placeholder_lorem_ipsum">Lorem Ipsum Dolor</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="title_activity_participants">Market Participants</string>
    <string name="title_activity_participant_detail">Participant Details</string>
    <string name="title_activity_disco_remittance_detail">Remittance By Distribution Company</string>
    <string name="title_activity_sp_remittance_detail">Remittance to SP</string>
    <string name="title_activity_settlements">Settlement Statements</string>
    <string name="title_activity_capacity">Capacity Update</string>
    <string name="title_activity_capacity_view">Capacity Records</string>
    <string name="title_activity_settlements_details">Settlement Details</string>
    <string name="title_activity_capacity_details">Capacity View Details</string>
    <string name="title_activity_settlements_approval">Settlements Approval History</string>
    <string name="title_activity_remittance">Remittance</string>
    <string name="title_activity_accounts">Accounts</string>
    <string name="title_activity_market_debt">Market Debts</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="nav_drawer_item_home">Home</string>
    <string name="nav_drawer_item_participant">Market Participants</string>
    <string name="nav_drawer_item_settlements">Settlement Statements</string>
    <string name="nav_drawer_item_debit_advice">Debit Advice</string>
    <string name="nav_drawer_item_remittance">Remittance</string>
    <string name="nav_drawer_item_mkt_debt">Market Debt</string>
    <string name="nav_drawer_item_profile">My Profile</string>
    <string name="nav_drawer_item_about_us">About Us</string>
    <string name="nav_drawer_item_settings">Settings</string>
    <string name="nav_drawer_item_sign_out">Sign Out</string>
    <string name="nav_drawer_item_help">Help</string>
    <string name="title_activity_dashboard">Power Collect</string>
    <string name="title_activity_preference">Preferences</string>
    <string name="nav_drawer_item_dashboard">Home</string>
    <string name="nav_drawer_item_credit_batch">Credit Batch</string>
    <string name="nav_drawer_item_credit_advice">Credit Advice</string>
    <string name="nav_drawer_item_create_capacity">Add Capacity</string>
    <string name="nav_drawer_item_capacity_view">View Capacity Records</string>
    <string name="nav_drawer_item_credit_approval">Credit Approval History</string>
    <string name="nav_drawer_item_debit_approval">Debit Approval History</string>
    <string name="nav_drawer_item_credit_batch_details">Credit Batch Details</string>
    <string name="nav_drawer_item_debit_batch_details">Debit Batch Details</string>
    <string name="nav_drawer_item_debit_batch">Debit Batch</string>


    <string name="login_progress_signing_in">Signing in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in_register">Sign in</string>
    <string name="btn_continue">Continue</string>
    <string name="account_type">www.jcedar.com.ng</string>
    <!--<string name="power_account_type">www.splasherstech.com</string>-->
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_server_down">Server down</string>
    <string name="error_field_required">This field is required</string>

    <string name="title_activity_account">Sign In</string>
    <string name="empty_accounts">No EBIPS accounts are available. Add an account to continue.</string>
    <string name="auth_name">POWER</string>
    <string name="str_search_hint">Search name</string>
    <string name="retry">Retry</string>
    <string name="taking_a_while">taking_a_while</string>
    <string name="role_MO">MO</string>
    <string name="title_activity_account_details">Account Details</string>
    <string name="btn_sign_in">Sign In</string>

    <string-array name="themes">
        <item>Theme.Light</item>
        <item>Theme.Dark</item>
        <item>Theme.grey</item>
    </string-array>
    <string-array name="themes_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="title_activity_naccounts">Accounts</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_result">Account not found</string>
    <string name="empty_batch_result">No result found</string>
    <string name="empty_credit_advice_result">No credit advice found</string>
    <string name="empty_debit_advice_result">No debit advice found</string>
    <string name="title_search_query">Search for \"&lt;b><xliff:g id="query">%1$s</xliff:g>&lt;b>\"</string>
    <string name="title_search_query1"><![CDATA[Search for \\\"&lt;b><xliff:g id=\"query\">%1$s</xliff:g>&lt;b>\\\"]]></string>
    <string name="title_activity_fts">Search</string>
    <string name="title_activity_genco_debt_detail">Genco Debt Detail</string>
    <string name="title_activity_debt_detail">Debt Detail</string>
    <string name="title_activity_disco_debt_details">Disco Debt Detail</string>
    <string name="title_activity_sp_debt_details">Service Provider Debt Details</string>
    <string name="title_disco_debt_section">Disco</string>
    <string name="title_genco_debt_section">Genco</string>
    <string name="title_sp_debt_section">Service Provider</string>
    <string name="title_disco_remit_section">Disco</string>
    <string name="title_genco_remit_section">Genco</string>
    <string name="title_sp_remit_section">Provider</string>
    <string name="title_activity_login">Visibook</string>
    <string name="operation_timed_out">Operation timed out, kindly retry.</string>
    <string name="generic_error">Unable to get balances at this time.</string>
    <string name="server_error">Service unavailable</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="title_check_balance">Check Balance</string>
    <string name="title_activity_approval">ApprovalActivity</string>
    <string name="sign_out">Sign out</string>
    <string name="title_activity_one_participant">OneParticipantActivity</string>



    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


    <string name="title_activity_main">MainActivity</string>
    <string name="check_email">Check Email</string>
    <string name="title_activity_pic_view">PicViewActivity</string>
    <string name="title_activity_student_details">Details</string>
    <string name="title_activity_all_student_details">AllStudentDetailsActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="call">Call</string>
    <string name="msg">Send Message</string>
    <string name="title_activity_recycler">Recycler</string>
    <string name="title_activity_details">Details</string>
    <string name="version">Version</string>
    <string name="developer">Developer</string>
    <string name="designer">Designer</string>
    <string name="action_update">Update</string>
    <string name="nav_drawer_item_add_update">Update Names</string>
    <string name="action_add">Add</string>
    <string name="title_activity_update">Update</string>
    <string name="title_activity_add">Add A New Name</string>
    <string name="phone">Phone number</string>
    <string name="conference_labels">Conference labels</string>
    <string name="excos">Excos</string>
    <string name="update_name">Update Name</string>
    <string name="my_profile">My Profile</string>
    <string name="settings_menu">Settings Menu</string>
    <string name="log_out">Log Out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_image_text">Change Image</string>
    <string name="uploaded">Picture Uploaded</string>
    <string name="member">Member</string>
</resources>
