<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <group android:id="@+id/grp0"
        android:checkableBehavior="single">
    <item android:title="Settings Menu">
        </item>
    </group>-->

    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">

        <item android:title="@string/conference_labels">
        <item
            android:id="@+id/nav_contactList"
            android:checked="false"
            android:icon="@drawable/ic_contact_list"
            android:title="Contact List" />
        </item>
        <item
            android:id="@+id/nav_excos"
            android:checked="false"
            android:icon="@drawable/ic_excos"
            android:title="@string/excos" />

        <item
            android:id="@+id/nav_profile"
            android:checked="false"
            android:icon="@drawable/ic_profile"
            android:title="@string/my_profile" />

        <item
            android:id="@+id/nav_update"
            android:checked="false"
            android:icon="@drawable/ic_add_list"
            android:title="@string/update_name" />
        </group>

    <group android:id="@+id/grp2"
        android:checkableBehavior="single">
        <item android:title="@string/settings_menu">

        <item
            android:id="@+id/nav_settings"
            android:checked="false"
            android:icon="@drawable/ic_settings"
            android:title="Settings" />
        </item>

        <item
            android:id="@+id/nav_logout"
            android:checked="false"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out" />

<!--        <item
            android:id="@+id/drafts"
            android:checked="false"
            android:icon="@drawable/ic_drafts_black"
            android:title="@string/draft_string" />


        <item
            android:id="@+id/allmail"
            android:checked="false"
            android:icon="@drawable/ic_email_black"
            android:title="@string/all_mail_string" />
        <item
            android:id="@+id/trash"
            android:checked="false"
            android:icon="@drawable/ic_delete_black"
            android:title="@string/trash_string" />
        <item
            android:id="@+id/spam"
            android:checked="false"
            android:icon="@drawable/ic_error_black"
            android:title="@string/spam_string" />-->

    </group>
</menu>